--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="Author" content="maria spiropulu">
 <meta name="keywords" content="maria spiropulu, spiropulu, Harvard,
 FNAL, accelerator, physics, particle physics, multijets, hadron collider, CERN, CMS, Caltech">
-<link rel="stylesheet" type="text/css" href="stylethesis.css">
+<link rel="stylesheet" type="text/css" href="styleTrk.css">
     <script language='JavaScript1.2' src='http://www.caltech.edu/aux/dynamic-images.js'></script>
     <script language='JavaScript1.2' src='http://www.caltech.edu/aux/image-functions.js'></script>
 </head>
