--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 
+title: HEP advaced tracking algorithms for particle physics
 ---
 <div class="blurb">
 	<h1>Hi there, </h1>
