--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ FNAL, accelerator, physics, particle physics, multijets, hadron collider, CERN, 
 	<div class="txt"> 
 	<a href="mailto:hep.trkx@hep.caltech.edu">project co-PI's </a><br>
 </div>
+	</div>
 
 	<div class="desc">
 		contact
