--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@ track identification performance, hence maintaining the physics performance inta
 <div class="txt">
 
 <ul>
-<li> Paolo </li>
-<li> next </li>
-<li>  next </li>
-  <li> next </li>
-<li>   next</li>
-<li> next </li>
+	<li> Paolo Calafiura (PI), Steve Farrell, Mayur Mudigonda, Prabhat (LBNL)</li>
+	<li> Lindsey Gray, Jim Kowalkowski, Panagiotis Spentzouris(co-PI) (FNAL) </li> 
+	<li> Josh Bendavid, Pietro Perona, Maria Spiropulu (co-PI), Jean-Roch Vlimant (Caltech)</li>
+	 
+	
 </ul>
 </div>
 <div class="desc"> People 
