--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ track identification performance, hence maintaining the physics performance inta
 </div>
 	</div>
 
-	<div class="desc">
-		contact
+	<div class="desc"><font size="3">
+		contact</font>
 </div>
 	<br class="clear">
 
