--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ track identification performance, hence maintaining the physics performance inta
 	<li> add here somehting  </li>
 
 	</ul>
-</div>
+	</div></div>
 <div class="desc"> reports & publications
 </div>
 	
@@ -105,8 +105,7 @@ track identification performance, hence maintaining the physics performance inta
 	</div></div>
 
 	<div class="desc"><font size="2">
-		contact</font>
-</div>
+		contact</font> </div>
 	<br class="clear">
 
 	</div>
