--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ FNAL, accelerator, physics, particle physics, hadron collider, CERN, ATKAS, CMS,
 -->
     
 	    </div> </div> 
-    <div class="desc"><font size="2"> test </font></div>
+    <div class="desc"><font size="2">  </font></div>
     <br class="clear" />
 </div>	   
 
@@ -98,7 +98,7 @@ track identification performance, hence maintaining the physics performance inta
 
 	</ul>
 	</div></div>
-<div class="desc"> reports & publications
+<div class="desc"> <div> reports & publications
 </div>
 	
 <br class="clear">
