--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ track identification performance, hence maintaining the physics performance inta
 
 <ul>
 
-	<li> add here somehting  </li>
+	<li> TBA  </li>
 
 	</ul>
 	</div></div>
-<div class="desc"> <div> reports & publications
+<div class="desc"> reports & publications
 </div>
 	
 <br class="clear">
