--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ track identification performance, hence maintaining the physics performance inta
 	
 </ul>
 </div>
-<div class="desc"> People 
+<div class="desc"> people 
 </div>
 <br class="clear" />
 </div>
